--- a/README.adoc
+++ b/README.adoc
@@ -6,4 +6,4 @@ Healthy Discord bot for your eyes
 Usage
 -----
 
-Make sure `DISCORD_TOKEN` is set in the environment and then just `cargo run`. The standard prefix is `./`, but can be changed via the `DISCORD_PREFIX` variable.
+Rename link:.env.example[.env.example] to `.env`, adjust the values and `cargo run`.
